Changelog Acumulus web shop extensions
======================================

This file contains a historical overview of changes in our own code.

8.0.0 (2023-03-??)
------------------
Refactorings:
- class Source:
  - Throws on construction based on an invalid source, making isValid() superfluous.
    Therefore, isValid() has been removed.
  - Renamed setSource()/getSource to setShopSource()/getShopSource().
  - Renamed getOrder to getShopOrder().
  - Added getShopCreditNote().
  - getCreditNotes() does no longer return null but this for a credit note.
- Renamed ShopCapabilities::getShopDefaults to ShopCapabilities::getDefaultShopConfig.


7.6.5 (2023-03-02) (JOO+PS+WC)
------------------------------
Bugs:
- PS: Wrong conversion specification in sprintf() in AcumulusEntryManager::insert.
- JOO4: Call to undefined method Joomla\CMS\Installer\Adapter\ComponentAdapter::get(),
  Extension Update: Custom install routine failure.
- WC: PHP Fatal error: declaration of WooCommerce\FormHelper::getMeta() must be compatible
  with parent definition.
- WC: TypeError: Return value of Siel\Acumulus\WooCommerce\Helpers\Token::getMetaDataValue()
  must be of the type string or null, bool returned.


7.6.4 (2023-02-07) (MA+PS only)
-------------------------------
Features:
- PHP8.2 awareness: removed use of a dynamic property in class Log.
- ALL: Fatal errors will now log stack trace (fallback for when mail does not work).

Bugs:
- MA (+ some other?): FormHelper::getMeta() could return null, leading to errors. This
  method will now return an empty array when there is no meta field.
- MA: Magento\Helpers\Registry.php(49): substr(): Argument #3 ($length) must be of type
  ?int, bool given.

Refactorings:
- MA: Added strict typing (PHP7.4 level).


7.6.3 (2023-02-06) (JOO only)
-----------------------------
Features:
- PHP8.1 awareness: Added the #[ReturnTypeWillChange] attribute where necessary. Turned
  out to be needed in only 1 place, code that isn't yet functional.