@@ -256,26 +256,49 @@ class ShopCapabilities extends ShopCapabilitiesBase
     {
         return [
             Mappings::Customer => [
-            // Customer defaults.
-            //legacy: 'contactYourId' => '[customer_user]', // WC_Abstract_order
-            'contactYourId' => '[source::customer_id]', // WC_Abstract_order
-            'vatNumber' => '[billing_vat_number|_vat_number|vat_number|VAT Number]', // Post meta
-            'telephone' => '[billing_phone]', // WC_Abstract_order
-            'email' => '[billing_email]', // WC_Abstract_order
-],
-            // Address line
-            'companyName1' => '[billing_company]', // WC_Abstract_order
-            'fullName' => '[billing_first_name+billing_last_name]', // WC_Abstract_order
-            'address1' => '[billing_address_1]', // WC_Abstract_order
-            'address2' => '[billing_address_2]', // WC_Abstract_order
-            'postalCode' => '[billing_postcode]', // WC_Abstract_order
-            'city' => '[billing_city]', // WC_Abstract_order
-
-            // Invoice lines defaults.
-            'itemNumber' => '[sku]',
-            'productName' => '[name]',
-            'costPrice' => '[cost_price]',
-
+                // Customer defaults.
+                //legacy: 'contactYourId' => '[customer_user]', // WC_Abstract_order
+                'contactYourId' => '[source::getShopOrder()::get_customer_id()]', // WC_Order
+                'vatNumber' => '[source::getShopOrder()::get_meta(billing_vat_number)'
+                    . '|source::getShopOrder()::get_meta(_vat_number)'
+                    . '|source::getShopOrder()::get_meta(vat_number)'
+                    . '|source::getShopOrder()::get_meta(Vat Number)]', // Post meta
+                'telephone' => '[source::getShopOrder()::get_billing_phone()]', // WC_Order
+                'telephone2' => '[source::getShopOrder()::get_shipping_phone()]', // WC_Order
+                'email' => '[source::getShopOrder()::get_billing_email()]', // WC_Order
+            ],
+            Mappings::InvoiceAddress => [
+                'companyName1' => '[source::getShopOrder()::get_billing_company]', // WC_Order
+                'fullName' => '[source::getShopOrder()::get_billing_first_name+source::getShopOrder()::get_billing_last_name]', // WC_Order
+                'address1' => '[source::getShopOrder()::get_billing_address_1]', // WC_Order
+                'address2' => '[source::getShopOrder()::get_billing_address_2]', // WC_Order
+                'postalCode' => '[source::getShopOrder()::get_billing_postcode]', // WC_Order
+                'city' => '[source::getShopOrder()::get_billing_city]', // WC_Order
+                'countryCode' => '[source::getShopOrder()::get_billing_country]', // WC_Order
+                //@todo? logic country = global $woocommerce->countries->get_countries()[countryCode];
+            ],
+            Mappings::ShippingAddress => [
+                'companyName1' => '[source::getShopOrder()::get_shipping_company()]', // WC_Order
+                'fullName' => '[source::getShopOrder()::get_shipping_first_name()+source::getShopOrder()::get_shipping_last_name()]', // WC_Order
+                'address1' => '[source::getShopOrder()::get_shipping_address_1()]', // WC_Order
+                'address2' => '[source::getShopOrder()::get_shipping_address_2()]', // WC_Order
+                'postalCode' => '[source::getShopOrder()::get_shipping_postcode()]', // WC_Order
+                'city' => '[source::getShopOrder()::get_shipping_city()]', // WC_Order
+                'countryCode' => '[source::getShopOrder()::get_shipping_country()]', // WC_Order
+                //@todo? logic country = global $woocommerce->countries->get_countries()[countryCode];
+            ],
+            Mappings::EmailInvoiceAsPdf => [
+                'emailTo' => '[source::getShopOrder()::get_billing_email()]', // WC_Order
+            ],
+            mappings::Invoice => [
+                // @todo: fields that come from source, metadata
+            ],
+            Mappings::ItemLine => [
+                'itemNumber' => '[sku]',
+                'productName' => '[name]',
+                'costPrice' => '[cost_price]',
+                // @todo: others? (e.g. quantity, unit price, metadata)
+            ],
         ];
     }
     /**
